# my_rn_project

./: .env.example  .env.local.example  .eslintrc.js  .gitignore  AGENTS.md  App.tsx  README.md  app.json  babel.config.js  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  playbackService.js  react-native.config.js  tsconfig.json
.cursor/: hooks.json
.cursor/agent-harness/: .gitignore
.cursor/hooks/: after-file-edit.mjs  before-submit-prompt.mjs  session-start.mjs  stop.mjs
.github/workflows/: agent-gates.yml
.harness/: README.md
.harness/agents/: README.md  conductor.md  executor.md  planner.md  reviewer.md
.harness/changes/: README.md  current.md  handoff-template.md
.harness/rules/: dual-truth.md  metro-babel-aliases.md  module-boundary.md  no-silent-accept.md  slice-contract.md  status-enums.md
.harness/wiki/: README.md
__mocks__/: react-native-video.js  react-native-webview.js
__tests__/: App.test.tsx
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
assets/app/: appShellAssets.ts
harmony/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
ios/: Podfile
scripts/: asset-parity-audit.js  design-token-spotcheck.mjs  patch-boost-podspec.js  patch-harmony-rnoh-packages.js  patch-harmony-video-link.js  patch-image-picker-autolinking.js  patch-rn-harmony-stubs.js  patch-yoga-ygvalue.js  pod-install-ios.js  smoke-checklist.sh  sync-app-shell-assets.js  sync-web-assets.js
(+255 files in other folders)
